hy340/phase2/xd/parser.output
Terminals unused in grammar

   COMMENT
   COMMENT2
   OTHER
   LEFT_SBRANCKET
   RIGHT_SBRANCKET
   LEFT_CBRANCKET
   RIGHT_CBRANCKET


Grammar

    0 $accept: program $end

    1 program: statements

    2 statements: stmt statements
    3           | %empty

    4 stmt: expr SEMICOLON
    5     | ifstmt
    6     | whilestmt
    7     | forstmt
    8     | returnstmt
    9     | BREAK SEMICOLON
   10     | CONTINUE SEMICOLON
   11     | block
   12     | funcdef
   13     | SEMICOLON

   14 expr: assignexpr
   15     | expr AND expr
   16     | expr OR expr
   17     | expr PLUS expr
   18     | expr MINUS expr
   19     | expr MULTI expr
   20     | expr DIV expr
   21     | expr MOD expr
   22     | expr EQUAL expr
   23     | expr NEQUAL expr
   24     | expr GREATER expr
   25     | expr LESS expr
   26     | expr GREATER_EQUAL expr
   27     | expr LESS_EQUAL expr
   28     | term

   29 $@1: %empty

   30 assignexpr: lvalue $@1 ASSIGN expr

   31 term: LEFT_PARENTHES expr RIGHT_PARENTHES
   32     | primary
   33     | MINUS expr
   34     | PPLUS lvalue

   35 $@2: %empty

   36 term: lvalue $@2 PPLUS
   37     | MMINUS lvalue

   38 $@3: %empty

   39 term: lvalue $@3 MMINUS
   40     | NOT expr

   41 primary: lvalue
   42        | call
   43        | objectdef
   44        | LEFT_PARENTHES funcdef RIGHT_PARENTHES
   45        | const

   46 const: NUMBER
   47      | REALNUM
   48      | STRING
   49      | TRUE
   50      | FALSE
   51      | NIL

   52 lvalue: ID
   53       | LOCAL ID
   54       | DCOLON ID
   55       | member

   56 member: lvalue DOT ID
   57       | lvalue LEFT_SBRACKET expr RIGHT_SBRACKET
   58       | call DOT ID
   59       | call LEFT_SBRACKET expr RIGHT_SBRACKET

   60 call: call LEFT_PARENTHES elist RIGHT_PARENTHES
   61     | lvalue callsuffix
   62     | LEFT_PARENTHES funcdef RIGHT_PARENTHES LEFT_PARENTHES elist RIGHT_PARENTHES

   63 callsuffix: normcall
   64           | methodcall

   65 normcall: LEFT_PARENTHES elist RIGHT_PARENTHES

   66 methodcall: DOTS ID LEFT_PARENTHES elist RIGHT_PARENTHES

   67 elist: expr cexprs
   68      | %empty

   69 cexprs: COMMA expr cexprs
   70       | %empty

   71 objectdef: LEFT_SBRACKET elist RIGHT_SBRACKET
   72          | LEFT_SBRACKET indexed RIGHT_SBRACKET

   73 indexed: indexedelem clindexedelem

   74 clindexedelem: COMMA indexedelem clindexedelem
   75              | %empty

   76 indexedelem: LEFT_CBRACKET expr COLON expr RIGHT_CBRACKET

   77 block: LEFT_CBRACKET RIGHT_CBRACKET

   78 $@4: %empty

   79 block: LEFT_CBRACKET $@4 stmt statements RIGHT_CBRACKET

   80 $@5: %empty

   81 $@6: %empty

   82 $@7: %empty

   83 funcdef: FUNCTION $@5 LEFT_PARENTHES $@6 idlist RIGHT_PARENTHES $@7 block

   84 $@8: %empty

   85 $@9: %empty

   86 $@10: %empty

   87 funcdef: FUNCTION ID $@8 LEFT_PARENTHES $@9 idlist RIGHT_PARENTHES $@10 block

   88 $@11: %empty

   89 idlist: ID $@11 cidlist
   90       | %empty

   91 $@12: %empty

   92 cidlist: COMMA ID $@12 cidlist
   93        | %empty

   94 ifstmt: IF LEFT_PARENTHES expr RIGHT_PARENTHES stmt
   95       | IF LEFT_PARENTHES expr RIGHT_PARENTHES stmt ELSE stmt

   96 whilestmt: WHILE LEFT_PARENTHES expr RIGHT_PARENTHES stmt

   97 forstmt: FOR LEFT_PARENTHES elist SEMICOLON expr SEMICOLON elist RIGHT_PARENTHES stmt

   98 returnstmt: RETURN expr SEMICOLON
   99           | RETURN SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 94 95
ELSE (259) 95
WHILE (260) 96
FOR (261) 97
FUNCTION (262) 83 87
RETURN (263) 98 99
BREAK (264) 9
CONTINUE (265) 10
LOCAL (266) 53
TRUE (267) 49
FALSE (268) 50
NIL (269) 51
NOT (270) 40
AND (271) 15
OR (272) 16
ASSIGN (273) 30
PLUS (274) 17
MINUS (275) 18 33
MULTI (276) 19
DIV (277) 20
MOD (278) 21
EQUAL (279) 22
NEQUAL (280) 23
PPLUS (281) 34 36
MMINUS (282) 37 39
GREATER (283) 24
LESS (284) 25
GREATER_EQUAL (285) 26
LESS_EQUAL (286) 27
NUMBER (287) 46
REALNUM (288) 47
ID (289) 52 53 54 56 58 66 87 89 92
STRING (290) 48
LEFT_CBRACKET (291) 76 77 79
RIGHT_CBRACKET (292) 76 77 79
LEFT_SBRACKET (293) 57 59 71 72
RIGHT_SBRACKET (294) 57 59 71 72
LEFT_PARENTHES (295) 31 44 60 62 65 66 83 87 94 95 96 97
RIGHT_PARENTHES (296) 31 44 60 62 65 66 83 87 94 95 96 97
SEMICOLON (297) 4 9 10 13 97 98 99
COMMA (298) 69 74 92
COLON (299) 76
DCOLON (300) 54
DOT (301) 56 58
DOTS (302) 66
COMMENT (303)
COMMENT2 (304)
OTHER (305)
UMINUS (306)
LEFT_SBRANCKET (307)
RIGHT_SBRANCKET (308)
LEFT_CBRANCKET (309)
RIGHT_CBRANCKET (310)


Nonterminals, with rules where they appear

$accept (56)
    on left: 0
program (57)
    on left: 1, on right: 0
statements (58)
    on left: 2 3, on right: 1 2 79
stmt (59)
    on left: 4 5 6 7 8 9 10 11 12 13, on right: 2 79 94 95 96 97
expr (60)
    on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28, on right:
    4 15 16 17 18 19 20 21 22 23 24 25 26 27 30 31 33 40 57 59 67 69
    76 94 95 96 97 98
assignexpr (61)
    on left: 30, on right: 14
$@1 (62)
    on left: 29, on right: 30
term (63)
    on left: 31 32 33 34 36 37 39 40, on right: 28
$@2 (64)
    on left: 35, on right: 36
$@3 (65)
    on left: 38, on right: 39
primary (66)
    on left: 41 42 43 44 45, on right: 32
const (67)
    on left: 46 47 48 49 50 51, on right: 45
lvalue (68)
    on left: 52 53 54 55, on right: 30 34 36 37 39 41 56 57 61
member (69)
    on left: 56 57 58 59, on right: 55
call (70)
    on left: 60 61 62, on right: 42 58 59 60
callsuffix (71)
    on left: 63 64, on right: 61
normcall (72)
    on left: 65, on right: 63
methodcall (73)
    on left: 66, on right: 64
elist (74)
    on left: 67 68, on right: 60 62 65 66 71 97
cexprs (75)
    on left: 69 70, on right: 67 69
objectdef (76)
    on left: 71 72, on right: 43
indexed (77)
    on left: 73, on right: 72
clindexedelem (78)
    on left: 74 75, on right: 73 74
indexedelem (79)
    on left: 76, on right: 73 74
block (80)
    on left: 77 79, on right: 11 83 87
$@4 (81)
    on left: 78, on right: 79
funcdef (82)
    on left: 83 87, on right: 12 44 62
$@5 (83)
    on left: 80, on right: 83
$@6 (84)
    on left: 81, on right: 83
$@7 (85)
    on left: 82, on right: 83
$@8 (86)
    on left: 84, on right: 87
$@9 (87)
    on left: 85, on right: 87
$@10 (88)
    on left: 86, on right: 87
idlist (89)
    on left: 89 90, on right: 83 87
$@11 (90)
    on left: 88, on right: 89
cidlist (91)
    on left: 92 93, on right: 89 92
$@12 (92)
    on left: 91, on right: 92
ifstmt (93)
    on left: 94 95, on right: 5
whilestmt (94)
    on left: 96, on right: 6
forstmt (95)
    on left: 97, on right: 7
returnstmt (96)
    on left: 98 99, on right: 8


State 0

    0 $accept: . program $end

    IF              shift, and go to state 1
    WHILE           shift, and go to state 2
    FOR             shift, and go to state 3
    FUNCTION        shift, and go to state 4
    RETURN          shift, and go to state 5
    BREAK           shift, and go to state 6
    CONTINUE        shift, and go to state 7
    LOCAL           shift, and go to state 8
    TRUE            shift, and go to state 9
    FALSE           shift, and go to state 10
    NIL             shift, and go to state 11
    NOT             shift, and go to state 12
    MINUS           shift, and go to state 13
    PPLUS           shift, and go to state 14
    MMINUS          shift, and go to state 15
    NUMBER          shift, and go to state 16
    REALNUM         shift, and go to state 17
    ID              shift, and go to state 18
    STRING          shift, and go to state 19
    LEFT_CBRACKET   shift, and go to state 20
    LEFT_SBRACKET   shift, and go to state 21
    LEFT_PARENTHES  shift, and go to state 22
    SEMICOLON       shift, and go to state 23
    DCOLON          shift, and go to state 24

    $default  reduce using rule 3 (statements)

    program     go to state 25
    statements  go to state 26
    stmt        go to state 27
    expr        go to state 28
    assignexpr  go to state 29
    term        go to state 30
    primary     go to state 31
    const       go to state 32
    lvalue      go to state 33
    member      go to state 34
    call        go to state 35
    objectdef   go to state 36
    block       go to state 37
    funcdef     go to state 38
    ifstmt      go to state 39
    whilestmt   go to state 40
    forstmt     go to state 41
    returnstmt  go to state 42


State 1

   94 ifstmt: IF . LEFT_PARENTHES expr RIGHT_PARENTHES stmt
   95       | IF . LEFT_PARENTHES expr RIGHT_PARENTHES stmt ELSE stmt

    LEFT_PARENTHES  shift, and go to state 43


State 2

   96 whilestmt: WHILE . LEFT_PARENTHES expr RIGHT_PARENTHES stmt

    LEFT_PARENTHES  shift, and go to state 44


State 3

   97 forstmt: FOR . LEFT_PARENTHES elist SEMICOLON expr SEMICOLON elist RIGHT_PARENTHES stmt

    LEFT_PARENTHES  shift, and go to state 45


State 4

   83 funcdef: FUNCTION . $@5 LEFT_PARENTHES $@6 idlist RIGHT_PARENTHES $@7 block
   87        | FUNCTION . ID $@8 LEFT_PARENTHES $@9 idlist RIGHT_PARENTHES $@10 block

    ID  shift, and go to state 46

    $default  reduce using rule 80 ($@5)

    $@5  go to state 47


State 5

   98 returnstmt: RETURN . expr SEMICOLON
   99           | RETURN . SEMICOLON

    LOCAL           shift, and go to state 8
    TRUE            shift, and go to state 9
    FALSE           shift, and go to state 10
    NIL             shift, and go to state 11
    NOT             shift, and go to state 12
    MINUS           shift, and go to state 13
    PPLUS           shift, and go to state 14
    MMINUS          shift, and go to state 15
    NUMBER          shift, and go to state 16
    REALNUM         shift, and go to state 17
    ID              shift, and go to state 18
    STRING          shift, and go to state 19
    LEFT_SBRACKET   shift, and go to state 21
    LEFT_PARENTHES  shift, and go to state 22
    SEMICOLON       shift, and go to state 48
    DCOLON          shift, and go to state 24

    expr        go to state 49
    assignexpr  go to state 29
    term        go to state 30
    primary     go to state 31
    const       go to state 32
    lvalue      go to state 33
    member      go to state 34
    call        go to state 35
    objectdef   go to state 36


State 6

    9 stmt: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 50


State 7

   10 stmt: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 51


State 8

   53 lvalue: LOCAL . ID

    ID  shift, and go to state 52


State 9

   49 const: TRUE .

    $default  reduce using rule 49 (const)


State 10

   50 const: FALSE .

    $default  reduce using rule 50 (const)


State 11

   51 const: NIL .

    $default  reduce using rule 51 (const)


State 12

   40 term: NOT . expr

    LOCAL           shift, and go to state 8
    TRUE            shift, and go to state 9
    FALSE           shift, and go to state 10
    NIL             shift, and go to state 11
    NOT             shift, and go to state 12
    MINUS           shift, and go to state 13
    PPLUS           shift, and go to state 14
    MMINUS          shift, and go to state 15
    NUMBER          shift, and go to state 16
    REALNUM         shift, and go to state 17
    ID              shift, and go to state 18
    STRING          shift, and go to state 19
    LEFT_SBRACKET   shift, and go to state 21
    LEFT_PARENTHES  shift, and go to state 22
    DCOLON          shift, and go to state 24

    expr        go to state 53
    assignexpr  go to state 29
    term        go to state 30
    primary     go to state 31
    const       go to state 32
    lvalue      go to state 33
    member      go to state 34
    call        go to state 35
    objectdef   go to state 36


State 13

   33 term: MINUS . expr

    LOCAL           shift, and go to state 8
    TRUE            shift, and go to state 9
    FALSE           shift, and go to state 10
    NIL             shift, and go to state 11
    NOT             shift, and go to state 12
    MINUS           shift, and go to state 13
    PPLUS           shift, and go to state 14
    MMINUS          shift, and go to state 15
    NUMBER          shift, and go to state 16
    REALNUM         shift, and go to state 17
    ID              shift, and go to state 18
    STRING          shift, and go to state 19
    LEFT_SBRACKET   shift, and go to state 21
    LEFT_PARENTHES  shift, and go to state 22
    DCOLON          shift, and go to state 24

    expr        go to state 54
    assignexpr  go to state 29
    term        go to state 30
    primary     go to state 31
    const       go to state 32
    lvalue      go to state 33
    member      go to state 34
    call        go to state 35
    objectdef   go to state 36


State 14

   34 term: PPLUS . lvalue

    LOCAL           shift, and go to state 8
    ID              shift, and go to state 18
    LEFT_PARENTHES  shift, and go to state 55
    DCOLON          shift, and go to state 24

    lvalue  go to state 56
    member  go to state 34
    call    go to state 57


State 15

   37 term: MMINUS . lvalue
